# legoml

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
experiments/: data_utils.py  step_utils.py
experiments/autoencoders/: data.py  exp_ae.ipynb  models.py  steps.py  train.py
experiments/image_clf/: config.py  data.py  eval.py  exp.ipynb  exp_clf.ipynb  models.py  perf_improv.ipynb  steps.py  train.py  train_ae_pretrained.py  trivialaug.ipynb
src/legoml/: __init__.py  exp_img_clf.py  experiments.py  experiments_multimodal.py  experiments_nlp.py  experiments_pipeline.py  experiments_vae.py
src/legoml/callbacks/: checkpoint.py  eval.py  metric.py  profiler.py  timing.py
src/legoml/core/: base.py  callback.py  constants.py  context.py  dataloaders.py  engine.py  event.py  experiment.py  metric.py  optimizers.py  schedulers.py  state.py  step_output.py
src/legoml/data/: batches.py  cifar10.py  mnist.py
src/legoml/embedders/: hf_image.py  hf_text.py  random.py
src/legoml/metrics/: binary.py  f1.py  multiclass.py  token_acc.py
src/legoml/nn/: activation.py  activations.py  attention.py  base.py  common.py  composite.py  conv.py  convs.py  layers.py  mlp.py  norm.py  norms.py  ops.py  pool.py  pooling.py  primitives.py  regularization.py  residual.py  shortcut.py  struct.py  tinycnn.py  types.py  upsample.py  utils.py  vae.py
src/legoml/objectives/: cross_entropy.py  weighted.py
src/legoml/schedulers/: keyframe.py  reducelr_with_warmup.py
src/legoml/tasks/: image_classification.py  multimodal_pair_similarity.py  nlp_token_classification.py  (+1 more)
(+42 files in other folders)
