[project]
name = "legoml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.5",
    "structlog>=25.4.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legoml", "experiments"]

[tool.basedpyright]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMissingParameterType = false
reportUnknownParameterType = false
typeCheckingMode = "standard"

